MD-2004-10-21-0: Enhancem.: - Profiling Enhancement, profiling switchable
                              from the configuration
                            - added profiling to all threads
                            - some cleanup
                            - man pages
                 Changed:   qmaster, schedd, execd, profiling, man
                 Review:    HP

SG-2004-10-21-1: Enhancem.: - 2/3 part of of the look ahead scheduler
                            extention.
                            - code cleanup
                            - minor perf. improvements
                 Changed:   scheduler
                 Review:    EB

SG-2004-10-21-0: Bugfix:    qsub und qalter accepted negativ ticket values
                 Issue:     1304
                 Bugtraq:   6174301
                 Changed:   qsub, qalter
                 Review:    EB

CR-2004-10-21-1: Testsuite: - new procedure "startup_core_system"
                            - new menu selective "(28) restart cluster"

CR-2004-10-21-0: Cleanup:   - code cleanup of commlib
                 Review:    AA
                 Changed:   commlib

JG-2004-10-20-0: Bugfix:    fixed qsh and test_drmaa (sge_prof_setup) 
                 Changed:   qsh test_drmaa
                 Review:    SG

SG-2004-10-20-0: Bugfix:    - sge_share_mon crashed on startup
                 Changed:   sge_share_mon
                 Review:    MD

CR-2004-10-19-0: Testsuite: - new testsuite test for commlib:
                              checktree/performance/throughput/commlib/check.exp
                 Changed:   commlib test binaries testsuite

AH-2004-10-19-0: Doc:       Enhanced qstat(1) man page about qstat -j option
                 Changed:   man pages
                 Bugtraq:   6181171
                 Review:    AD

JG-2004-10-19-1: Bugfix:    fixed broken build on alinux

JG-2004-10-19-0: Testsuite: Enhanced ssh support: Which ssh client to use is now 