@@ -40,7 +40,7 @@ set check_init_level_procedure "init_level"
 
 set check_category            "COMPATIBILITY SYSTEM VERIFIED"
 set check_name                "issue_1141"
-set check_description(0)      "qmaster clients may not reconnect after qmaster outage"
+set check_description(0)      "schedd and qmaster get out of sync - no scheduling for a long time"
 set check_needs               "init_core_system"      ;# dependencies of this check (name of other check)
 set check_root_access_needs   "no"
 set check_functions           ""
