@@ -63,6 +63,8 @@ proc install_shadowd {} {
    global CHECK_OUTPUT
 
    puts $CHECK_OUTPUT "no shadowd installation for SGE(EE) 5.3"
+
+   set_error 0 "install_shadowd not for 5.3"
 }
 
 
