@@ -1,3 +1,6 @@
+JG-2004-10-21-0: Testsuite: Fixed a number of tests, fixed typos and incorrect
+                            test descriptions.
+
 MD-2004-10-21-0: Enhancem.: - Profiling Enhancement, profiling switchable
                               from the configuration
                             - added profiling to all threads
